Added a cool slider and the option to rotate the protractor

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 			<div id="protractor-tool" class="protractor-tool xy">
 				<div class="protractor-tool-inner">
+					<div id="protractor-angle-center" class="number">0&deg;</div>
 				</div>
 				<canvas id ="protractor-canvas" class="protractor-canvas" width="200" height="200"></canvas>
 			</div>
